config/networkpolicy/ocs-operator/ocs-operator-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ocs-operator
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      name: ocs-operator
  policyTypes:
  - Ingress
