config/networkpolicy/ocs-operator/ocs-provider-server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ocs-provider-server
  namespace: openshift-storage
spec:
  podSelector:
    matchLabels:
      app: ocsProviderApiServer
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
    ports:
    - protocol: TCP
      port: 50051
